#49 fix: label overflow for sales figures viz

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -230,7 +230,10 @@ body {
 						max-width: max-content;
 					}
 
-					div {
+					&>div {
+						// border: 4px solid hotpink;
+						padding: 0 75px 75px 75px;
+
 						svg {
 							width: 100%;
 							height: 50vw;
